Декоративные элементы в шапке и на главной

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <nav class="main-menu container">
         <ul>
-          <li>Главная</li>
+          <li><a href="/">Главная</a></li>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Каталог</a></li>
           <li><a href="#">Новости</a></li>
@@ -79,7 +79,7 @@
         <p>Вы можете забрать товар сами, <br>
           заехав в наш офис:
         </p>
-        <p class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="img/main-map.jpg" alt="Карта проезда" width="300" height="158"></a></p>
+        <div class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="img/main-map.jpg" alt="Карта проезда" width="300" height="158"></a></div>
         <button class="button-contacts">Заблудились? Напишите нам!</button>
       </section>
     </div>
