Закончила декоративные элементы на главной

--- a/catalog.html
+++ b/catalog.html
@@ -316,9 +316,24 @@
         </p>
         <div class="footer-social">
           <ul>
-            <li><a class="social-button" href="#">Вконтакте</a></li>
-            <li><a class="social-button" href="#">Фейсбук</a></li>
-            <li><a class="social-button" href="#">Инстаграм</a></li>
+            <li>
+              <a class="social-button" href="#">
+                  <span class="visually-hidden">Вконтакте</span>
+                  <img src="img/icon-vk.svg" height="15" width="26">
+                </a>
+            </li>
+            <li>
+              <a class="social-button" href="#">
+                  <span class="visually-hidden">Фейсбук</span>
+                  <img src="img/icon-fb.svg" height="22" width="12">
+                </a>
+            </li>
+            <li>
+              <a class="social-button" href="#">
+                  <span class="visually-hidden">Инстаграм</span>
+                  <img src="img/icon-insta.svg" height="21" width="21">
+                </a>
+            </li>
           </ul>
         </div>
         <div class="footer-dev-contacts">
