Подогнала кнопки в шапке под макет

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <input type="search" name="search" placeholder="Поиск:" id="search-field" class="search-input">
           </form>
           <div class="header-quicklinks">
-            <a class="header-bookmarks" href="#">Закладки: 0</a>
-            <a class="header-cart" href="#">Корзина: 0</a>
-            <a class="header-order" href="#">Оформить заказ</a>
+            <a class="header-quicklink header-bookmarks" href="#">Закладки: 0</a>
+            <a class="header-quicklink header-cart" href="#">Корзина: 0</a>
+            <a class="header-quicklink header-order" href="#">Оформить заказ</a>
           </div>
         </div>
       </div>
