--- a/catalog.html
+++ b/catalog.html
@@ -24,9 +24,9 @@
           <input type="search" name="search" placeholder="Поиск:" id="search-field" class="search-input">
         </form>
         <div class="header-quicklinks">
-          <a class="header-bookmarks" href="#">Закладки: 0</a>
-          <a class="header-cart active" href="#">Корзина: 10</a>
-          <a class="header-order" href="#">Оформить заказ</a>
+          <a class="header-quicklink header-bookmarks" href="#">Закладки: 0</a>
+          <a class="header-quicklink header-cart active" href="#">Корзина: 10</a>
+          <a class="header-quicklink header-order" href="#">Оформить заказ</a>
         </div>
       </div>
     </div>
@@ -41,8 +41,25 @@
       </div>
       <div class="user-navigation authorized">
         <ul class="user-buttons">
-          <li><a href="user-profile.html" class="user-button name-button">Равшан Джамшутович</a></li>
-          <li><a class="user-button logout-button" href="#">Выйти</a></li>
+          <li>
+            <a href="user-profile.html" class="user-button name-button">
+              <svg class="name-button-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
+                <path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/>
+              </svg>
+              Равшан Джамшутович
+            </a>
+          </li>
+          <li>
+            <a class="user-button logout-button" href="#">
+              <span class="visually-hidden">Выйти</span>
+              <svg class="logout-button-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
+                <g fill="#c5c5c5">
+                  <path fill="#c5c5c5" d="M21 8.5L12.125 0v6h-6v5h6v6z"/>
+                  <path fill="#c5c5c5" d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/>
+                </g>
+              </svg>
+            </a>
+          </li>
         </ul>
         <ul class="personal-buttons">
           <li><a href="#">Мои заказы</a></li>
@@ -64,7 +81,7 @@
   </header>
   <main class="container">
     <ul class="breadcrumbs">
-      <li><a href="index.html">Главная</a></li>
+      <li class="breadcrumbs-home"><a href="index.html"><span class="visually-hidden">Главная</span></a></li>
       <li><a href="#">Каталог</a></li>
       <li><a href="#">Инструмент</a></li>
       <li class="breadcrumbs-current">Перфораторы</li>
@@ -77,22 +94,22 @@
           <!-- Здесь будет фильтр по цене -->
           <fieldset class="filter-brands">
             <legend>Производители:</legend>
-            <input type="checkbox" name="bosch" id="brand-bosch" checked>
+            <input type="checkbox" name="bosch" id="brand-bosch" class="visually-hidden" checked>
             <label for="brand-bosch">Bosch</label>
-            <input type="checkbox" name="interskol" id="brand-interskol">
+            <input type="checkbox" name="interskol" id="brand-interskol" class="visually-hidden">
             <label for="brand-interskol">Интерскол</label>
-            <input type="checkbox" name="makita" id="brand-makita" checked>
+            <input type="checkbox" name="makita" id="brand-makita" class="visually-hidden" checked>
             <label for="brand-makita">Makita</label>
-            <input type="checkbox" name="dewalt" id="brand-dewalt">
+            <input type="checkbox" name="dewalt" id="brand-dewalt" class="visually-hidden">
             <label for="brand-dewalt">Dewalt</label>
-            <input type="checkbox" name="hitachi" id="brand-hitachi">
+            <input type="checkbox" name="hitachi" id="brand-hitachi" class="visually-hidden">
             <label for="brand-hitachi">Hitachi</label>
           </fieldset>
           <fieldset class="filter-charge">
             <legend>Питание:</legend>
-            <input type="radio" name="charge" id="charge-battery" value="battery" checked>
+            <input type="radio" name="charge" id="charge-battery" value="battery" class="visually-hidden" checked>
             <label for="charge-battery">Аккумуляторные</label>
-            <input type="radio" name="charge" id="charge-electric" value="electric">
+            <input type="radio" name="charge" id="charge-electric" value="electric" class="visually-hidden">
             <label for="charge-electric">Сетевые</label>
           </fieldset>
           <button type="submit" class="filter-button">Показать</button>
@@ -103,14 +120,14 @@
         <h2 class="visually-hidden">Список товаров</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
+            <div class="catalog-item-buttons">
+              <button class="catalog-item-button catalog-item-order">Купить</button>
+              <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
                            <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
                         </a>
-              <div class="catalog-item-buttons">
-                <button class="catalog-item-order">Купить</button>
-                <button class="catalog-item-bookmark">В закладки</button>
-              </div>
             </div>
             <div class="catalog-content-container">
               <a href="catalog-item.html">
@@ -123,14 +140,14 @@
             </div>
           </li>
           <li class="catalog-item">
+            <div class="catalog-item-buttons">
+              <button class="catalog-item-button catalog-item-order">Купить</button>
+              <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
                            <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
                         </a>
-              <div class="catalog-item-buttons">
-                <button class="catalog-item-order">Купить</button>
-                <button class="catalog-item-bookmark">В закладки</button>
-              </div>
             </div>
             <div class="catalog-content-container">
               <a href="catalog-item.html">
@@ -143,14 +160,14 @@
             </div>
           </li>
           <li class="catalog-item catalog-item-new catalog-item-active">
+            <div class="catalog-item-buttons">
+              <button class="catalog-item-button catalog-item-order">Купить</button>
+              <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
                            <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
                         </a>
-              <div class="catalog-item-buttons">
-                <button class="catalog-item-order">Купить</button>
-                <button class="catalog-item-bookmark">В закладки</button>
-              </div>
             </div>
             <div class="catalog-content-container">
               <a href="catalog-item.html">
@@ -162,14 +179,14 @@
             </div>
           </li>
           <li class="catalog-item">
+            <div class="catalog-item-buttons">
+              <button class="catalog-item-button catalog-item-order">Купить</button>
+              <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
                            <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
                         </a>
-              <div class="catalog-item-buttons">
-                <button class="catalog-item-order">Купить</button>
-                <button class="catalog-item-bookmark">В закладки</button>
-              </div>
             </div>
             <div class="catalog-content-container">
               <a href="catalog-item.html">
@@ -182,14 +199,14 @@
             </div>
           </li>
           <li class="catalog-item catalog-item-new">
+            <div class="catalog-item-buttons">
+              <button class="catalog-item-button catalog-item-order">Купить</button>
+              <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
                            <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
                         </a>
-              <div class="catalog-item-buttons">
-                <button class="catalog-item-order">Купить</button>
-                <button class="catalog-item-bookmark">В закладки</button>
-              </div>
             </div>
             <div class="catalog-content-container">
               <a href="catalog-item.html">
@@ -202,14 +219,14 @@
             </div>
           </li>
           <li class="catalog-item">
+            <div class="catalog-item-buttons">
+              <button class="catalog-item-button catalog-item-order">Купить</button>
+              <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
                            <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
                         </a>
-              <div class="catalog-item-buttons">
-                <button class="catalog-item-order">Купить</button>
-                <button class="catalog-item-bookmark">В закладки</button>
-              </div>
             </div>
             <div class="catalog-content-container">
               <a href="catalog-item.html">
@@ -221,14 +238,14 @@
             </div>
           </li>
           <li class="catalog-item catalog-item-new">
+            <div class="catalog-item-buttons">
+              <button class="catalog-item-button catalog-item-order">Купить</button>
+              <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
                            <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
                         </a>
-              <div class="catalog-item-buttons">
-                <button class="catalog-item-order">Купить</button>
-                <button class="catalog-item-bookmark">В закладки</button>
-              </div>
             </div>
             <div class="catalog-content-container">
               <a href="catalog-item.html">
@@ -241,14 +258,14 @@
             </div>
           </li>
           <li class="catalog-item">
+            <div class="catalog-item-buttons">
+              <button class="catalog-item-button catalog-item-order">Купить</button>
+              <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
                            <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
                         </a>
-              <div class="catalog-item-buttons">
-                <button class="catalog-item-order">Купить</button>
-                <button class="catalog-item-bookmark">В закладки</button>
-              </div>
             </div>
             <div class="catalog-content-container">
               <a href="catalog-item.html">
@@ -261,14 +278,14 @@
             </div>
           </li>
           <li class="catalog-item">
+            <div class="catalog-item-buttons">
+              <button class="catalog-item-button catalog-item-order">Купить</button>
+              <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
                            <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
                         </a>
-              <div class="catalog-item-buttons">
-                <button class="catalog-item-order">Купить</button>
-                <button class="catalog-item-bookmark">В закладки</button>
-              </div>
             </div>
             <div class="catalog-content-container">
               <a href="catalog-item.html">
