Сделала 2 модальных окна

--- a/catalog.html
+++ b/catalog.html
@@ -360,7 +360,7 @@
           </p>
           <p class="footer-developer">
             Разработано —<br>
-            <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
           </p>
         </div>
       </div>
