--- a/catalog.html
+++ b/catalog.html
@@ -367,12 +367,16 @@
     </div>
   </footer>
   <section class="modal modal-cart">
-    <h2>Товар добавлен в корзину!</h2>
-    <div class="modal-cart-buttons">
-      <a href="cart.html" class="modal-cart-order">Оформить заказ</a>
-      <button type="button" class="modal-cart-dismiss">Продолжить покупки</button>
+    <div class="modal-container">
+      <h2>Товар добавлен в корзину!</h2>
     </div>
-    <button class="modal-close" type="button">Закрыть</button>
+    <div class="modal-button-container">
+      <a href="cart.html" class="button-order">Оформить заказ</a>
+      <button type="button" class="button-dismiss">Продолжить покупки</button>
+    </div>
+    <button class="modal-close" type="button">
+      <span class="visually-hidden">Закрыть</span>
+    </button>
   </section>
 </body>
 
