Завершила верстку обязательных блоков

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body class="inner">
@@ -22,6 +22,9 @@
         <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
           <label for="search-field" class="visually-hidden">Поиск</label>
           <input type="search" name="search" placeholder="Поиск:" id="search-field" class="search-input">
+          <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+            <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
+          </svg>
         </form>
         <div class="header-quicklinks">
           <a class="header-quicklink header-bookmarks" href="#">Закладки: 0</a>
@@ -126,18 +129,14 @@
             </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
-                           <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
-                        </a>
+                <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+              </a>
             </div>
-            <div class="catalog-content-container">
-              <a href="catalog-item.html">
-                           <h3>Перфоратор BOSCH BFG 3000</h3>
-                        </a>
-              <div class="catalog-item-price">
-                <span class="old-price">22500 Р.</span>
-                <span class="new-price">15500 Р.</span>
-              </div>
-            </div>
+            <a href="catalog-item.html">
+              <h3>Перфоратор BOSCH BFG 3000</h3>
+            </a>
+            <span class="old-price">22500 Р.</span>
+            <span class="new-price">15500 Р.</span>
           </li>
           <li class="catalog-item">
             <div class="catalog-item-buttons">
@@ -146,18 +145,14 @@
             </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
-                           <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
-                        </a>
+                <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
+              </a>
             </div>
-            <div class="catalog-content-container">
-              <a href="catalog-item.html">
-                           <h3>Перфоратор BOSCH BFG 6000</h3>
-                        </a>
-              <div class="catalog-item-price">
-                <span class="old-price">30500 Р.</span>
-                <span class="new-price">25500 Р.</span>
-              </div>
-            </div>
+            <a href="catalog-item.html">
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+            </a>
+            <span class="old-price">30500 Р.</span>
+            <span class="new-price">25500 Р.</span>
           </li>
           <li class="catalog-item catalog-item-new catalog-item-active">
             <div class="catalog-item-buttons">
@@ -166,17 +161,13 @@
             </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
-                           <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
-                        </a>
+                 <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+              </a>
             </div>
-            <div class="catalog-content-container">
-              <a href="catalog-item.html">
-                           <h3>Перфоратор BOSCH BFG 2000</h3>
-                        </a>
-              <div class="catalog-item-price">
-                <span class="new-price">12500 Р.</span>
-              </div>
-            </div>
+            <a href="catalog-item.html">
+               <h3>Перфоратор BOSCH BFG 2000</h3>
+            </a>
+            <span class="new-price">12500 Р.</span>
           </li>
           <li class="catalog-item">
             <div class="catalog-item-buttons">
@@ -185,18 +176,14 @@
             </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
-                           <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
-                        </a>
+                 <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+              </a>
             </div>
-            <div class="catalog-content-container">
-              <a href="catalog-item.html">
-                           <h3>Перфоратор BOSCH BFG 3000</h3>
-                        </a>
-              <div class="catalog-item-price">
-                <span class="old-price">22500 Р.</span>
-                <span class="new-price">15500 Р.</span>
-              </div>
-            </div>
+            <a href="catalog-item.html">
+               <h3>Перфоратор BOSCH BFG 3000</h3>
+            </a>
+            <span class="old-price">22500 Р.</span>
+            <span class="new-price">15500 Р.</span>
           </li>
           <li class="catalog-item catalog-item-new">
             <div class="catalog-item-buttons">
@@ -205,18 +192,14 @@
             </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
-                           <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
-                        </a>
+                 <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
+              </a>
             </div>
-            <div class="catalog-content-container">
-              <a href="catalog-item.html">
-                           <h3>Перфоратор BOSCH BFG 6000</h3>
-                        </a>
-              <div class="catalog-item-price">
-                <span class="old-price">30500 Р.</span>
-                <span class="new-price">25500 Р.</span>
-              </div>
-            </div>
+            <a href="catalog-item.html">
+               <h3>Перфоратор BOSCH BFG 6000</h3>
+            </a>
+            <span class="old-price">30500 Р.</span>
+            <span class="new-price">25500 Р.</span>
           </li>
           <li class="catalog-item">
             <div class="catalog-item-buttons">
@@ -225,17 +208,13 @@
             </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
-                           <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
-                        </a>
+                 <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+              </a>
             </div>
-            <div class="catalog-content-container">
-              <a href="catalog-item.html">
-                           <h3>Перфоратор BOSCH BFG 2000</h3>
-                        </a>
-              <div class="catalog-item-price">
-                <span class="new-price">12500 Р.</span>
-              </div>
-            </div>
+            <a href="catalog-item.html">
+               <h3>Перфоратор BOSCH BFG 2000</h3>
+            </a>
+            <span class="new-price">12500 Р.</span>
           </li>
           <li class="catalog-item catalog-item-new">
             <div class="catalog-item-buttons">
@@ -244,18 +223,14 @@
             </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
-                           <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
-                        </a>
+                 <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+              </a>
             </div>
-            <div class="catalog-content-container">
-              <a href="catalog-item.html">
-                           <h3>Перфоратор BOSCH BFG 3000</h3>
-                        </a>
-              <div class="catalog-item-price">
-                <span class="old-price">22500 Р.</span>
-                <span class="new-price">15500 Р.</span>
-              </div>
-            </div>
+            <a href="catalog-item.html">
+               <h3>Перфоратор BOSCH BFG 3000</h3>
+            </a>
+            <span class="old-price">22500 Р.</span>
+            <span class="new-price">15500 Р.</span>
           </li>
           <li class="catalog-item">
             <div class="catalog-item-buttons">
@@ -264,18 +239,14 @@
             </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
-                           <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
-                        </a>
+                 <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
+              </a>
             </div>
-            <div class="catalog-content-container">
-              <a href="catalog-item.html">
-                           <h3>Перфоратор BOSCH BFG 6000</h3>
-                        </a>
-              <div class="catalog-item-price">
-                <span class="old-price">30500 Р.</span>
-                <span class="new-price">25500 Р.</span>
-              </div>
-            </div>
+            <a href="catalog-item.html">
+               <h3>Перфоратор BOSCH BFG 6000</h3>
+            </a>
+            <span class="old-price">30500 Р.</span>
+            <span class="new-price">25500 Р.</span>
           </li>
           <li class="catalog-item">
             <div class="catalog-item-buttons">
@@ -284,17 +255,13 @@
             </div>
             <div class="catalog-image-container">
               <a href="catalog-item.html">
-                           <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
-                        </a>
+                 <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+              </a>
             </div>
-            <div class="catalog-content-container">
-              <a href="catalog-item.html">
-                           <h3>Перфоратор BOSCH BFG 2000</h3>
-                        </a>
-              <div class="catalog-item-price">
-                <span class="new-price">12500 Р.</span>
-              </div>
-            </div>
+            <a href="catalog-item.html">
+               <h3>Перфоратор BOSCH BFG 2000</h3>
+            </a>
+            <span class="new-price">12500 Р.</span>
           </li>
         </ul>
       </section>
