--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,6 +20,9 @@
           <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
             <label for="search-field" class="visually-hidden">Поиск</label>
             <input type="search" name="search" placeholder="Поиск:" id="search-field" class="search-input">
+            <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+              <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
+            </svg>
           </form>
           <div class="header-quicklinks">
             <a class="header-quicklink header-bookmarks" href="#">Закладки: 0</a>
@@ -174,7 +177,7 @@
           <input type="email" name="email" placeholder="email@example.com">
         </label>
         <label class="modal-field letter-field">Текст письма:
-          <textarea name="letter" placeholder="В свободной форме"></textarea>
+          <textarea name="letter" placeholder="В свободной форме" rows="5"></textarea>
         </label>
       </div>
       <div class="modal-button-container">
