Исправила ошибку валидации

--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
               <li>
                 <a class="social-button" href="#">
                   <span class="visually-hidden">Вконтакте</span>
-                  <img src="img/icon-vk.svg" height="15" width="26">
+                  <img src="img/icon-vk.svg" height="15" width="26" alt="Страница «Техномарта» ВКонтакте">
                 </a>
               </li>
               <li>
                 <a class="social-button" href="#">
                   <span class="visually-hidden">Фейсбук</span>
-                  <img src="img/icon-fb.svg" height="22" width="12">
+                  <img src="img/icon-fb.svg" height="22" width="12" alt="Страница «Техномарта» на Фейсбуке">
                 </a>
               </li>
               <li>
                 <a class="social-button" href="#">
                   <span class="visually-hidden">Инстаграм</span>
-                  <img src="img/icon-insta.svg" height="21" width="21">
+                  <img src="img/icon-insta.svg" height="21" width="21" alt="Страница «Техномарта» в Инстаграме">
                 </a>
               </li>
             </ul>
